--- a/index.slides.html
+++ b/index.slides.html
@@ -11939,8 +11939,7 @@ Yes, then good :)</p>
 <p><strong>Automated Machine Learning - A Paradigm shift that Accelerates Dat Scientist Productivity </strong>@ Airbnb**</p>
 <h2 id="Building-A.I.-That-Can-Build-A.I.">Building A.I. That Can Build A.I.<a class="anchor-link" href="#Building-A.I.-That-Can-Build-A.I.">&#182;</a></h2>
 </blockquote>
-
-<pre><code>                                                                                Slide Credits: SciPy 2018</code></pre>
+<p>Slide Credits: SciPy 2018</p>
 
 </div>
 </div>
@@ -11951,8 +11950,7 @@ Yes, then good :)</p>
 <div class="text_cell_render border-box-sizing rendered_html">
 <p><strong>Google and others are looking for automated ways to deal with a shortage of AI experts.</strong></p>
 <p><img src="./images/google_automl.JPG" alt=""></p>
-
-<pre><code>                                                                                Slide Credits: Google</code></pre>
+<p>Slide Credits: Google</p>
 
 </div>
 </div>
@@ -11968,11 +11966,9 @@ Yes, then good :)</p>
 <li>Select an appropriate model family.</li>
 <li>Optimize model hyperparameters.</li>
 <li>Postprocess machine learning models.</li>
-<li><p>Critically analyze the results obtained.</p>
-
-<pre><code>                                                                              Image Credits: Randy Olson</code></pre>
-</li>
+<li>Critically analyze the results obtained.</li>
 </ul>
+<p>Image Credits: Randy Olson</p>
 
 </div>
 </div>
