--- a/index.slides.html
+++ b/index.slides.html
@@ -12039,6 +12039,19 @@ Yes, then good :)</p>
 </div>
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
+<p><strong>Steps</strong></p>
+<p>Extract Data from Meetup (hint: Meetup API)</p>
+<p><img src="https://cdn-images-1.medium.com/max/800/1*WxBM1lB5WzDjrDXYfi9gtw.gif" alt=""></p>
+<p><img src="https://cdn-images-1.medium.com/max/1600/1*PIrETF3nqHBQ7K9g9y_p7w.png" alt=""></p>
+<p>Credits: Andrew NG's CNN Course and this Medium post on <a href="https://medium.com/@ageitgey/machine-learning-is-fun-part-5-language-translation-with-deep-learning-and-the-magic-of-sequences-2ace0acca0aa">Machine Learning is Fun</a></p>
+
+</div>
+</div>
+</div></section><section>
+<div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
+</div>
+<div class="inner_cell">
+<div class="text_cell_render border-box-sizing rendered_html">
 <p><img src="./images/Output_sample.PNG" alt=""></p>
 
 </div>
